package com.bgzyy.design.pattern.decorator.decoratorcoffee;

/**
 * @author bgzyy
 * @since 2019/9/19
 */
public class Decaf extends Coffee {
    public Decaf() {
        setDescription("无因咖啡");
        setPrice(12.0);
    }
}
